--- a/e/ev/eve/evernote.com.html
+++ b/e/ev/eve/evernote.com.html
@@ -1,85 +1,97 @@
-<!--The following is the downloaded HTML source of the evernote.com privacy policy that was archived on 2009-03-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090305232056id_/http%3A//evernote.com/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the evernote.com privacy policy that was archived on 2009-11-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091103160040id_/http%3A//www.evernote.com/about/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="en-us">
 <title>Privacy Policy | Evernote Corporation</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="note taking, note taking software, notes, mobile phone snapshots, camera phone, image search, image recognition, handwriting recognition, digital ink, ink notes, memory, remember, life capture, memory capture, productivity software, getting things done, gtd, memory assistant, personal memory assistant">
-	<link rel="stylesheet" type="text/css" href="/about/css/master.css">
-	<link rel="stylesheet" type="text/css" media="print" href="/about/css/print.css">
-	<link rel="Shortcut Icon" href="/about/img/favicon.ico" type="image/x-icon">
-	<script src="/about/js/popup.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://www.google.com/jsapi" type="text/javascript"></script>
-	<script type="text/javascript">
-	  google.load("jquery","1.2.3");
-	  google.load('prototype','1.6');
-	  function __(str) { return str; }
+<meta name="description" content="">
+<meta name="keywords" content="note taking, note taking software, notes, mobile phone snapshots, camera phone, image search, image recognition, handwriting recognition, digital ink, ink notes, memory, remember, life capture, memory capture, productivity software, getting things done, gtd, memory assistant, personal memory assistant">
+<link href="/about/media/css/reset.css" rel="stylesheet" type="text/css">
+<link href="/about/media/css/style.css" rel="stylesheet" type="text/css">
+<link href="/about/media/css/headlines.css" rel="stylesheet" type="text/css">
+<link href="/about/media/css/jquery.jcarousel.css" rel="stylesheet" type="text/css">
+<link href="/about/media/css/skins/tango/skin.css" rel="stylesheet" type="text/css">
+<script src="https://www.google.com/jsapi" type="text/javascript"></script>
+<script type="text/javascript">
+	/* <![CDATA[ */	
+	  	  google.load("jquery","1.3.2");
+	  	  function __(str) { return str; }
 	  var RecaptchaOptions = { lang : 'en' };
+
+      function getCookie(c_name) {
+          if (document.cookie.length>0)
+            {
+            c_start=document.cookie.indexOf(c_name + '=');
+            if (c_start!=-1)
+              { 
+              c_start=c_start + c_name.length+1; 
+              c_end=document.cookie.indexOf(';',c_start);
+              if (c_end==-1) c_end=document.cookie.length;
+              return unescape(document.cookie.substring(c_start,c_end));
+              } 
+            }
+          return '';
+      }
+      	/* ]]> */
+</script>
+<script src="/about/media/js/form_entry.js" type="text/javascript"></script>
+<script src="/about/media/js/jquery.jcarousel.pack.js" type="text/javascript"></script>
+<script src="/about/media/js/featurelist.js" type="text/javascript"></script>
+<link href="/about/media/img/favicon.ico" rel="Shortcut Icon" type="image/x-icon">
+<!--[if IE 6]>
+	<link href="/about/media/css/ie6.css" rel="stylesheet" type="text/css" />
+	<script src="/about/media/js/belated_png-0.0.8a.min.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		DD_belatedPNG.fix('#header a img, ');
 	</script>
+<![endif]-->
+
+<!--[if IE 7]>
+	<link href="/about/media/css/ie7.css" rel="stylesheet" type="text/css" />
+<![endif]-->
 </head>
 
-<body class="nav_corp sn_corp_privacy tn_">
+<body class="nav_corp sn_6">
+
 
 <div id="container">
-	
+
 	<div id="top">
 		<div id="skip"><a href="#content" title="skip navigation" accesskey="2">Skip to main content</a></div>
-	</div><!-- /top -->
-	
-	<div id="util">
-	    		<span id="loginStatus"><ul><li id="util_signin"><a id="signin-link" href="http://web.archive.org/Login.action" title="Sign in">Sign in</a></li><li id="util_account"><a href="http://web.archive.org/Registration.action" title="Register">Register</a></li><li id="premium_account"><a href="http://web.archive.org/about/premium" title="Premium">Premium</a></li><li id="util_support"><a href="http://web.archive.org/about/support/" title="Support">Support</a></li></ul></span>
-	</div><!-- /util --><hr>
-	
-	<img src="/about/img/rounded_bars.gif" class="noprint">
-		
-	<div id="container2">
-		
-		<div id="logo_nav_wrap">
-			<div id="logo">
-				<span><a href="/" title="To the Evernote Homepage"><img src="/about/img/logo.gif" border="0"></a></span>
-			</div><!-- /logo -->
-			
-			<div id="nav">
-			<ul> 
-				<li id="nav_what_is_en"><a href="/about/what_is_en" title="What is Evernote"><span lang="en">What is Evernote?</span></a></li>
-				<li id="nav_download"><a href="/about/download" title="Downloads"><span lang="en">Downloads</span></a></li>
-				<li id="nav_blog"><a href="http://blog.evernote.com" title="Blog"><span lang="en">Blog</span></a></li>
-                <li id="nav_signup"><a id="nav_home_link" href="http://web.archive.org/Login.action" title="Sign in"><span>Sign in</span></a></li>
-			</ul>
-			</div><!-- /nav -->
-		
-		</div><!--/logo_nav_wrap--><hr>
-	
-		<div id="col-wrapper">
+	</div>
 
-<div id="banner">
-	<img src="/about/img/bnr_privacy_policy.gif" alt="Privacy Policy">
-</div>
+	<div id="container2">
+
+		<div id="header">
+			<a href="/"><img src="/about/media/img/logo.png" alt="Evernote logo" id="sitelogo"></a>
+			<div id="center_links">
+				<a href="/about/learn_more/" id="silo_learn_more">Learn more</a> | <a href="http://blog.evernote.com/" id="silo_noteworthy">Noteworthy Blog</a>
+			</div>
+			<div id="utility_links">
+				<p><a href="https://www.evernote.com/Login.action" id="silo_sign_in">Sign in</a></p>
+				<p><a href="/about/premium/" id="silo_premium">Go Premium</a></p>
+				<p><a href="https://www.evernote.com/Registration.action" id="silo_get_started">Get started</a></p>
+				<p><a href="/about/download/" id="silo_downloads">Downloads</a></p>
+							    					<p id="language">
+				    								<script type="text/javascript" charset="utf-8">
+								/* <![CDATA[ */
+								var lang = navigator.userLanguage || navigator.language;
+								if ((lang.indexOf("ru") == 0) || (getCookie('langSwitched') == 1)) {
+								  document.write("<span lang=\"\"><a href=\"javascript:switchLanguage('ru');\">Сайт на русском</a></span>");
+								}
+								/* ]]> */
+							</script>
+										    						</p>
+			    			</div>
+		</div>
 
 
 <div id="content">
 
+	<h1 id="hdr_privacy"><span>Privacy Policy</span></h1>
 
-<div id="col_a">
-	<div class="subnav">
-	<ul>
-		<li id="sn_corp_overview"><a lang="en" href="/about/corp/">Company Information</a></li>
-		<li id="sn_corp_news"><a lang="en" href="/about/corp/news/">News</a></li>	
-		<li id="sn_corp_contact"><a lang="en" href="/about/contact/">Contact Us</a></li>
-		<li id="sn_corp_tos"><a lang="en" href="/about/tos/">Terms of Service</a></li>
-		<li id="sn_corp_privacy"><a lang="en" href="/about/privacy/">Privacy Policy</a></li>		
-	</ul>
-</div><!-- /subnav -->
-</div><!-- /col_a -->
-
-
-<div id="col_bc">
-
-	<h1>Privacy Policy</h1>
-
-	<p><strong lang="en">Effective Date: July 23, 2008</strong></p>
+	<p><strong lang="en">Effective Date: May 5, 2009</strong></p>
 	
 	<p>Evernote Corporation values the privacy of those who use our web site, products and services and makes all commercially reasonable efforts to protect it. This Privacy Policy covers the collection, use and disclosure of personal information that may be collected any time you interact with Evernote, such as when you visit our web site, use or purchase our products and services, or communicate with Evernote employees. Please read the following to learn more about what information we collect, what we do with that information, and how we may use your personal information.</p>
 	
@@ -159,177 +171,100 @@
 	
 	<div class="indent" lang=""><p>Evernote Corporation<br>
 		Attn: Compliance Manager<br>
-		710 Lakeway Dr. #290<br>
-		Sunnyvale, CA 94085</p></div>
-
-
-</div><!-- /col_bc -->
+		333 Evelyn Ave<br>
+		Mountain View, CA 94041</p></div>
 
 </div><!-- /content -->
 
 
-		</div><!-- /col-wrapper -->
-		
-	</div><!-- /container2 -->
+<div id="sidebar">
+	<div class="sb_box">
+	<div class="sb_head">
+		<h4 id="hdr_company_information"><span>Company Information</span></h4>
+	</div>
+	<div class="sb_content">
+		<ul>
+			<li id="sn_1"><a lang="en" href="/about/corp/">About Us</a></li>
+			<li id="sn_2"><a lang="en" href="/about/corp/news/">News</a></li>
+			<li id="sn_3"><a lang="en" href="/about/contact/">Contact Us</a></li>
+			<li id="sn_5"><a lang="en" href="/about/tos/">Terms of Service</a></li>
+			<li id="sn_6"><a lang="en" href="/about/privacy/">Privacy Policy</a></li>
+			<li id="sn_7"><a lang="en" href="/about/trademark/">Trademark Use</a></li>
+		</ul>
+	</div>
+	<div class="sb_foot"></div>
+</div><!-- /sb_box -->
+</div><!-- /sidebar -->
+
+
+		<br class="clear">
+
 	
-	<div id="footer">
-		<div id="footer_container">
-			<div id="footer_links">
-				<a lang="en" href="/about/download/">Downloads</a> | <a lang="en" href="/about/corp/">Company Information</a> | <a lang="en" href="/about/developer">Developers</a> | <a lang="en" href="/about/contact/">Contact Us</a> | <a lang="en" href="/about/tos/">Terms of Service</a> | <a lang="en" href="/about/privacy/">Privacy Policy</a>
-			</div>
-			<div id="footer_copyright">© 2009, Evernote Corporation.</div>
-		</div><!--/footer_container-->
-	</div><!--/footer-->	
+		<div id="footer">
+			<div id="footer_left">
+				<p><a href="/about/corp/" class="alpha">About us</a> | <a href="/about/developer/">Developers</a> | <a href="/about/support/">Support</a> | <a href="/about/tos">Terms of service</a> | <a href="/about/privacy/">Privacy policy</a> | <a href="/about/trademark/">Trademark</a></p>
+				<div id="copyright">Copyright 2009, Evernote Corporation | All rights reserved</div>
+			</div>		
+					</div>
+
+
+	</div><!-- /container2 -->
 
 </div><!-- /container -->
 
+
 <script type="text/javascript" charset="utf-8">
 /* <![CDATA[ */
-
-/**
- * Login Status (displaying the user information at the top of the web site
- */
-function setLoginStatus(html) {
-   document.getElementById("loginStatus").innerHTML = html;
-   var welcomeElement = document.getElementById("welcome-link");
-   var signInElement = document.getElementById("signin-link");
-   var homeElement = document.getElementById("nav_home_link");
-   if (!homeElement)
-       return;
-   
-   if (welcomeElement) {
-     homeElement.innerHTML = "<span>" + __("My notes") + "</span>";
-     homeElement.href = welcomeElement.href;
-     homeElement.title = welcomeElement.title;
-   } else if (signInElement) {
-     homeElement.innerHTML = "<span>" + __("Sign in") + "</span>";
-     homeElement.href = signInElement.href;
-     homeElement.title = signInElement.title;
-   }
+function includeGA() {
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 }
 
-function makeRequest(url) {
-    var httpRequest;
-    if (window.XMLHttpRequest) { // Mozilla, Safari, ...
-        httpRequest = new XMLHttpRequest();
-        if (httpRequest.overrideMimeType) {
-            httpRequest.overrideMimeType('text/xml');
-        }
-    } 
-    else if (window.ActiveXObject) { // IE
-        try {
-            httpRequest = new ActiveXObject("Msxml2.XMLHTTP");
-            } 
-            catch (e) {
-                       try {
-                            httpRequest = new ActiveXObject("Microsoft.XMLHTTP");
-                           } 
-                         catch (e) {}
-                      }
-         }
-    if (!httpRequest) {
-        setLoginStatus(getErrorText());
-        return false;
-    }
-    httpRequest.onreadystatechange = function() { 
-    
-      if (httpRequest.readyState == 4) {
-          if (httpRequest.status == 200) {
-              setLoginStatus(httpRequest.responseText);
-          } else {
-              setLoginStatus(getErrorText());
-          }
-      }
-    };
-    httpRequest.open('GET', url, true);
-    httpRequest.send('');
+function setupGATracker() {
+	if (typeof(_gat) != "undefined") {
+	    var pageTracker = _gat._getTracker("UA-285778-5");
+	    pageTracker._initData();
+	    pageTracker._trackPageview();
+	}
 }
 
-function getCookie(c_name) {
-    if (document.cookie.length>0)
-      {
-      c_start=document.cookie.indexOf(c_name + '=');
-      if (c_start!=-1)
-        { 
-        c_start=c_start + c_name.length+1; 
-        c_end=document.cookie.indexOf(';',c_start);
-        if (c_end==-1) c_end=document.cookie.length;
-        return unescape(document.cookie.substring(c_start,c_end));
-        } 
-      }
-    return '';
+includeGA();
+setupGATracker();
+
+function setLangCookie(lang) {
+	document.cookie = 'prefLang' + "=" + escape(lang) + ';path=/';
 }
-
-function getHostName() {
-    var url = window.location;
-    var host = url.host;
-    if (host.indexOf('evernote.com') == 0 || 
-        host.indexOf('preview.evernote.com') == 0) {
-        host = 'www.evernote.com'; // use canonical host name for our production site
-    }
-    
-    if (url.port != '443' && url.port != '80' && url.port != '') {
-        host += ':' + url.port; // append non-standard port number, if any
-    }
-
-    return host;
+			
+function switchLanguage(lang) {
+	document.cookie = 'langSwitched=1;path=/';
+	setLangCookie(lang);
+	window.location.href = '/';
 }
-
-function getSecureUrlPrefix() {
-    var host = getHostName();
-    if (host == 'www.evernote.com') {
-        return 'https://' + host;
-    } else {
-        return 'http://' + host; // assume staging servers and local environments do not have https enabled
-    }
+		
+var pageLocale = 'en';
+var localeFromCookie = getCookie('prefLang');
+if (localeFromCookie != pageLocale) {
+	setLangCookie(pageLocale);
 }
-
-function getUrlPrefix() {
-    return 'http://' + getHostName();
-}
-
-function getErrorText() {
-    return '<ul><li id="util_signin"><a id="signin-link" href="' + getSecureUrlPrefix() + 
-    '/Login.action" title="' + 
-         __("Sign in") + '">' + __("Sign in") + '</a></li>' +
-         '<li id="util_account"><a href="' + getSecureUrlPrefix() +'/Registration.action" title="'+ 
-         __("Register") + '">' + __("Register") + '</a></li>' +
-         '<li id="premium_account"><a href="' + getSecureUrlPrefix() +'/about/premium" title="'+ 
-         __("Premium") + '">' + __("Premium") + '</a></li>' +
-    '<li id="util_support"><a href="' + getUrlPrefix() + '/about/support/" title="' + 
-         __("Support") + '">' + __("Support") + '</a></li></ul>';
-}
-
-function setupLoginStatus() {
-  var authCookie = getCookie('auth');
-  var s = authCookie.indexOf(':U=');
-  if (s > 0) {
-   var e = authCookie.indexOf(':', s+1);
-   if (e > 0) {
-     var url = window.document.location.protocol + '//' + 
-               window.document.location.host +  '/'  + 'loginStatus.jsp?' +
-               authCookie.substring(s+3,e);
-     makeRequest(url);
-     return ;
-   }
-  }
-  setLoginStatus(getErrorText());
-  
-}
-setupLoginStatus();
-
 /* ]]> */
-</script>
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+
+<!-- Begin TellApart -->
+<div id="__cmbDiv" style="display:none"></div>
 <script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-285778-5");
-pageTracker._initData();
-pageTracker._trackPageview();
+var cmbUrlPrefix = ("https:" == document.location.protocol) ?
+"https://sslt" : "http://static";
+document.write(unescape("%3Cscript type='text/javascript' src='" +
+cmbUrlPrefix + ".tellapart.com/crumb.js'%3E%3C/script%3E"));
+</script><script type="text/javascript" src="https://sslt.tellapart.com/crumb.js"></script>
+<script type="text/javascript">
+try {
+  var tracker = TellApartCrumb.getTracker("12IXZCOHxNLf", "pv");
+  tracker.finalize();
+} catch (e) {}
 </script>
+<!-- End TellApart -->
+
 
 
 
