--- a/r/re/ret/retailgigs.com.html
+++ b/r/re/ret/retailgigs.com.html
@@ -1,7 +1,10 @@
-<!--The following is the downloaded HTML source of the retailgigs.com privacy policy that was archived on 2009-04-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090428051809id_/http%3A//www.retailgigs.com/mkt/content/js/default.asp%3Fpg%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the retailgigs.com privacy policy that was archived on 2009-11-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091104053709id_/http%3A//www.retailgigs.com/mkt/content/js/default.asp%3Fpg%3Dprivacy) for the most accurate reproduction.-->
 
-<html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
+<meta http-equiv="Content-Language" content="en-us">
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Search Merchandising, Purchasing &amp; Retail Jobs &amp; Resumes, Find Career Resources - RetailGigs.com</title><meta name="description" content="Fast Job Searching! Employer search, job search and resume search. The ultimate resource for searching companies and jobs - RetailGigs.com."><meta name="keywords" content="jobs, job, careers, employment, resume, job posting, resume distribution, resume posting, resumes,  career center, help wanted, job opportunities, candidates, find resume, classified job listings">
 <meta name="y_key" content="5906dc08ba6fe990">
 <meta name="verify-v1" content="h4hl7ajJgdv+WfovZQoiOymKlR1J1cKQwS6PpUHGA2I="  =""> 
@@ -9,7 +12,7 @@
 
 </head>
 
-<body class="yui-skin-sam"><link href="/common/templates/template3/styles/style4/style.css" rel="stylesheet" type="text/css">
+<body><link href="/common/templates/template3/styles/style4/style.css" rel="stylesheet" type="text/css">
       <!--[if IE 6]>
       <link rel="stylesheet" type="text/css" href="/common/templates/template3/styles/style4/ie6_fix.css" />
       <![endif]-->
@@ -23,7 +26,7 @@
   <tbody><tr>
 		<td><a href="http://www.RetailGigs.com"><img border="0" src="/Common/Images/TemplateLogos/Main/RetailGigsCom.jpg" alt="RetailGigs.com The Number One Source for Professionals"></a></td>
 		<td align="right" valign="middle">
-    <iframe src="http://ads.beyond.com/abmw.aspx?a=TR1_468x60_JS&amp;SitePath=http://www.RetailGigs.com&amp;pid=957808&amp;uid=423131&amp;ind=30&amp;isframe=true" width="468" height="60" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" valign="bottom"></iframe>
+    <iframe src="http://ads.beyond.com/abmw.aspx?a=TR1_468x60_JS&amp;SitePath=http://www.RetailGigs.com&amp;pid=957808&amp;uid=423131&amp;ind=30&amp;isframe=true" width="468" height="60" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" valign="bottom" allowtransparency="true"></iframe>
     </td>
 	</tr>
 	<tr>
@@ -48,6 +51,7 @@
 <script type="text/javascript">
 var d1 = new Date();
 var track_page_load_begin_time = d1.getTime();
+var bUseBeyondBox;
 </script>
 
 
@@ -264,6 +268,8 @@ writeTrackingPixel();
 </tr></tbody></table>
 </div>
 
+
+
 <div id="new_footer">
 
 <ul id="job_seekers_list">
@@ -295,12 +301,7 @@ writeTrackingPixel();
     <li><a href="http://www.RetailGigs.com/js/form/contactusform.asp">Contact Us</a></li> 
   
   
-	<!--li><a href="http://www.RetailGigs.com/JS/Form/PreChatLoad.asp?pg=/mkt/content/js/default.asp" target="new">Live Help</a></li-->
-	<li>
-  
-  <a href="#LiveHelp" onclick="window.open('/JS/Form/PreChatLoad.asp?seg=JS&amp;pg=/mkt/content/js/default.asp', 'LiveHelp','height=200, width=300,scrollbars=no')">Live Help</a>
-  
-  </li>
+	<li><a href="#LiveHelp" onclick="window.open('http://www.RetailGigs.com/JS/Form/PreChatLoad.asp?seg=JS&amp;pg=/mkt/content/js/default.asp', 'LiveHelp','height=200, width=300,scrollbars=no')"><img style="float:none;margin:0;" src="https://server.iad.liveperson.net/hc/66118572/?cmd=repstate&amp;site=66118572&amp;imageUrl=http://www.beyond.com/Common/images/livehelp/footer/&amp;ver=1" name="hcIcon" border="0"></a></li>
 </ul>
 <ul id="network_list">
 	<li><span class="title">The Beyond.com Network</span></li>
@@ -309,6 +310,7 @@ writeTrackingPixel();
 	<li><a href="http://www.RetailGigs.com/Channel.asp">Merchandising Channel</a>
 	</li><li><a href="javascript:window.location='http://www.beyond.com/content/webcommunities.asp'">Partner with Beyond.com</a></li>
 	<li><a href="javascript:window.location='http://www.beyond.com/jobboard/content/'">Get a Job Board</a></li>
+	
 </ul>
 <div id="bottom_text">
 a beyond.com career community
@@ -318,14 +320,7 @@ a beyond.com career community
 </div>
 </div>
 </div>
-<script language="JavaScript" type="text/javascript">
-<!-- Yahoo! Inc.
-var ysm_accountid  = "1IPDF83OP6GTL3MB4JQHUJR62SO";
-document.write("<SCR" + "IPT language='JavaScript' type='text/javascript' " 
-+ "SRC=//" + "srv3.wa.marketingsolutions.yahoo.com" + "/script/ScriptServlet" + "?aid=" + ysm_accountid 
-+ "></SCR" + "IPT>");
-// -->
-</script><script language="JavaScript" type="text/javascript" src="//srv3.wa.marketingsolutions.yahoo.com/script/ScriptServlet?aid=1IPDF83OP6GTL3MB4JQHUJR62SO"></script><script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-3327373-17";
@@ -343,7 +338,33 @@ if (typeof(window.ysm_customData) != 'object') window.ysm_customData = new Objec
 window.ysm_customData.segment_1FISDR5DO7EBQQ = "event=1,transId=,currency=,amount=";
 // -->
 </script>
-
-
+<!-- SiteCatalyst code version: H.19.3. Copyright 1997-2009 Omniture, Inc. More info available at http://www.omniture.com -->
+<script language="JavaScript" type="text/javascript" src="/common/javascript/omn/s_code.js"></script>
+<script language="JavaScript" type="text/javascript"><!--
+/******DO NOT ALTER ANYTHING BELOW THIS LINE******/
+var s_code=s.t();if(s_code)document.write(s_code)//--></script>
+<!-- End SiteCatalyst code version: H.20.3. -->
+<!-- Begin comScore Tag -->
+<script>document.write(unescape("%3Cscript src='" + (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js' %3E%3C/script%3E"));</script><script src="https://sb.scorecardresearch.com/beacon.js"></script>
+<script>
+COMSCORE.beacon({
+c1:2,
+c2:6035052,
+c3:"",
+c4:"",
+c5:"",
+c6:"",
+c15:""
+});
+</script>
+<noscript><img src="http://b.scorecardresearch.com/p?c1=2&c2=6035052&c3=&c4=&c5=&c6=&c15=&cj=1" /></noscript>
+<!-- End comScore Tag --><script language="JavaScript" type="text/javascript">
+<!-- Yahoo! Inc.
+var ysm_accountid  = "1IPDF83OP6GTL3MB4JQHUJR62SO";
+document.write("<SCR" + "IPT language='JavaScript' type='text/javascript' " 
++ "SRC=//" + "srv3.wa.marketingsolutions.yahoo.com" + "/script/ScriptServlet" + "?aid=" + ysm_accountid 
++ "></SCR" + "IPT>");
+// -->
+</script><script language="JavaScript" type="text/javascript" src="//srv3.wa.marketingsolutions.yahoo.com/script/ScriptServlet?aid=1IPDF83OP6GTL3MB4JQHUJR62SO"></script>
 
 </body></html>
