--- a/z/zi/zip/ziprecruiter.com.html
+++ b/z/zi/zip/ziprecruiter.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ziprecruiter.com privacy policy that was archived on 2010-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100628183406id_/http%3A//www.ziprecruiter.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ziprecruiter.com privacy policy that was archived on 2010-07-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100730052219id_/http%3A//www.ziprecruiter.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -13,13 +13,12 @@
 <![endif]-->
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <script type="text/javascript" src="/js/jquery-1.3.2.min.js"></script>
-    <script type="text/javascript" src="/js/jquery-ui-1.7.2.custom.min.js"></script>
     <script type="text/javascript" src="/js/jquery.qtip-1.0.0-rc3.min.js"></script>
     <script type="text/javascript" src="/js/js.js"></script>
     <script type="text/javascript" src="/js/jquery.alerts.js"></script>
     <script type="text/javascript" src="/js/jquery.validate.min.js"></script>
     <script type="text/javascript" src="/js/jquery.textarearesizer.js"></script>
-    <script type="text/javascript" src="/js/jquery.blockUI.js"></script>
+    <script type="text/javascript" src="/js/jquery.popupwindow.js"></script>
 	 <script type="text/javascript" src="/js/jquery.scrollTo.js"></script>
 	 <script type="text/javascript" src="/js/jquery.serialScroll-1.2.2-min.js"></script> 
 <script type="text/javascript" src="/js/jquery-colorbox.js"></script>
@@ -36,6 +35,11 @@
 				$(".inlineCreateInterview").colorbox({width:"650px", inline:true, href:"#createInterviewForm"});
 				$(".inlineInterviewShare").colorbox({width:"840px", onComplete:function () { jobPostingOpen(); }});
 				$(".inlineCreateUser").colorbox({width:"650px", inline:true, href:"#createUserForm"});
+				$(".inlineResumeCC").colorbox({width:"700px", inline:true, href:"#resumeCCForm"});
+				$(".inlinePostUpgrade").colorbox({width:"700px", inline:true, href:"#postUpgradePop"});
+				$(".inlinePostPreview").colorbox({width:"960px",inline:true, href:"#postPreviewPop"});
+
+
 
 
 				//Example of preserving a JavaScript event for inline calls.
@@ -48,6 +52,7 @@
 
 </head>
 <body class="pub aboutus privacy subPages"><div id="cboxOverlay" style="display: none;"></div><div id="colorbox" class="" style="padding-bottom: 50px; padding-right: 50px; display: none;"><div id="cboxWrapper" style=""><div style=""><div id="cboxTopLeft" style="float: left;"></div><div id="cboxTopCenter" style="float: left;"></div><div id="cboxTopRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxMiddleLeft" style="float: left;"></div><div id="cboxContent" style="float: left;"><div id="cboxLoadedContent" class="" style="width: 0px; height: 0px; overflow: hidden;"></div><div id="cboxLoadingOverlay" class="" style=""></div><div id="cboxLoadingGraphic" class="" style=""></div><div id="cboxTitle" class="" style=""></div><div id="cboxCurrent" class="" style=""></div><div id="cboxNext" class="" style=""></div><div id="cboxPrevious" class="" style=""></div><div id="cboxSlideshow" class="" style=""></div><div id="cboxClose" class="" style=""></div></div><div id="cboxMiddleRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxBottomLeft" style="float: left;"></div><div id="cboxBottomCenter" style="float: left;"></div><div id="cboxBottomRight" style="float: left;"></div></div></div><div style="position: absolute; width: 9999px; visibility: hidden; display: none;"></div></div>
+<a id="top" name="top"></a>
 	<div class="bodyContainer">
 		<div id="pubNavWrap">
 			<div id="pubNav">
@@ -246,8 +251,7 @@ In addition, we may notify you in accordance with your account preferences. </p>
       <li><a href="/terms">Terms of Service</a></li>
     </ul>
         <div class="signUpFooter">
-      <a href="/post-a-job" class="btn wide">Post a Job Now</a>
-      <p class="textCenter topMargin5">4-day free trial!</p>
+      <a href="/post-a-job" class="btn wide">Post Free Job Ad</a>
     </div>
         <div class="clear"></div>
           <div class="seo round8">
